--- a/starter/02-HTML-Fundamentals/style.css
+++ b/starter/02-HTML-Fundamentals/style.css
@@ -1,28 +1,83 @@
-h1 {
-  color: blue;
-  font-size: 26px;
+body {
+  color: #444;
   font-family: sans-serif;
+}
+
+h1,
+h2,
+h3 {
+  color: #1098ad;
+}
+
+h1 {
+  font-size: 26px;
   text-transform: uppercase;
   font-style: italic;
 }
 
 h2 {
   font-size: 25px;
-  font-family: sans-serif;
 }
 
 p {
   font-size: 20px;
-  font-family: sans-serif;
   line-height: 1.5;
 }
 
 h4 {
-  font-family: sans-serif;
   text-align: center;
 }
 
 li {
-  font-family: sans-serif;
   font-size: 20px;
+}
+
+/* footer p {
+  font-size: 16px;
+} */
+
+/* article header p {
+  font-style: italic;
+} */
+
+#copyright {
+  font-size: 16px;
+}
+
+#author {
+  font-style: italic;
+}
+
+.related-author {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+#posts {
+  list-style: none;
+}
+
+.main-header {
+  background-color: #f7f7f7;
+}
+
+aside {
+  background-color: #f7f7f7;
+  border: 5px solid #1098ad;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+/* a:visited {
+  color: red;
+} */
+
+a:hover {
+  color: orangered;
+}
+
+a:active {
+  text-decoration: underline dotted blue;
 }
