--- a/starter/04-CSS-Layouts/style.css
+++ b/starter/04-CSS-Layouts/style.css
@@ -2,6 +2,7 @@
   /* border-top: 10px solid #1098ad; */
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 /* PAGE SECTIONS */
@@ -14,7 +15,7 @@ body {
 }
 
 .container {
-  width: 800px;
+  width: 1200px;
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
@@ -82,6 +83,7 @@ h4 {
   font-size: 20px;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 p {
@@ -134,6 +136,7 @@ li:last-child {
 
 .related {
   list-style: none;
+  margin-left: 0px;
 }
 
 body {
@@ -265,3 +268,45 @@ footer p {
 nav p {
   font-size: 18px;
 } */
+
+/* FLOATS */
+
+.author-img {
+  float: left;
+  margin-bottom: 20px;
+  margin-right: 20px;
+}
+
+.author {
+  float: left;
+  margin-top: 10px;
+}
+
+h1 {
+  float: left;
+}
+
+nav {
+  float: right;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: block;
+}
+
+article {
+  width: 825px;
+  float: left;
+}
+
+aside {
+  width: 300px;
+  float: right;
+  padding: 30px;
+}
+
+footer {
+  clear: both;
+}
